fix multiple scrollbars issue (3)

--- a/frontend/src/css/index.css
+++ b/frontend/src/css/index.css
@@ -34,3 +34,7 @@ body,
 html {
 	overflow-x: hidden !important;
 }
+
+body {
+	overflow-y: hidden !important;
+}
